# Soft_Neck_Robot

./: README.md
Soft_neck_Soft_sensor/: CMakeLists.txt
Soft_neck_Soft_sensor/CSVdata/: IMU_pitch_data.csv  IMU_roll_data.csv  IMU_rpy_data.csv  IMU_rpy_time_data.csv  IMU_yaw_data.csv  dR.csv  data_control_signal_pitch_velocity.csv  data_control_signal_roll_velocity.csv  data_ep.csv  data_er.csv  data_position_motor1.csv  data_position_motor2.csv  data_position_motor3.csv  data_velocity_motor1.csv  data_velocity_motor2.csv  data_velocity_motor3.csv  main_time_data.csv  pitch_from_res.csv  preload_rpy_input_data.csv  resistance_data.csv  resistance_time_data.csv  target_rpy_input_data.csv
Soft_neck_Soft_sensor/main/: 0_position_test.cpp  10_model_identification.cpp  11_model_identification_with_filtering.cpp  12_controlGIAN_flex_sensor.cpp  13_controlGIAN_flex_sensor_increasedIMU.cpp  15_model_identification_arduino.cpp  16_model_identification_arduino_POSITION.cpp  1_controlGIAN.cpp  2_controlGIAN_IMU_MULTIMETER.cpp  3_controlGIAN_IMU_MULTIMETER_reference_signal.cpp  4_controlGIAN_thread.cpp  5_controlGIAN_timer_final.cpp  6_controlGIAN_with_saving_data.cpp  7_controlGIAN_new_variables.cpp  8_identification.cpp  9_controlGIAN_new_kinematics.cpp  demo1.cpp  description_360_3cycles.txt  multimeter_communicationLinux.cpp  reference_signals.cpp  test_sensor.cpp
src/: 14_controlGIAN_arduino.cpp
src/Filter/: Filter.ino
